# libstrophe

./: .gitignore  CMakeLists.txt  libstrophe.pc.cmakein
cmake/: FindCARES.cmake
